# package-blueprint

./: .gitignore  .gitignore.jinja  README.md  README.md.jinja  copier.yml  do.py  magic.py  pyproject.toml  pyproject.toml.jinja  uv.lock.jinja
.github.jinja/workflows/: release.yml.jinja
.github/workflows/: release.yml  release.yml.jinja
reports/: coverage-badge.svg.jinja  version-badge.svg.jinja
src/{{package_name}}/: __init__.py
tests/: test_dummy.py
