[project]
name = "package-blueprint"
version = "0.1.4"
description = "UV package starting template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
[[project.authors]]
name = "lanzani"
email = "hello@federicolanzani.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [ "pre-commit", "ruff",]

[tool.hatch.build.targets.wheel]
packages = [ "src/{{package_name}}",]
