[project]
name = "package-blueprint"
version = "0.1.7"
description = "UV package starting template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
[[project.authors]]
name = "lanzani"
email = "hello@federicolanzani.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
 "pre-commit>=4.2.0",
 "pytest>=8.3.5",
 "pytest-cov>=6.0.0",
 "ruff>=0.11.2",
]

[tool.hatch.build.targets.wheel]
packages = [ "src/{{package_name}}",]
